Commit No.5 – add back button & extend list

--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -37,5 +37,17 @@
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:text="@string/latte_title"/>
+        <TextView
+            android:id="@+id/espresso"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/espresso_title"
+            android:padding="10dp" />
+        <TextView
+            android:id="@+id/macchiato"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/macchiato_title"
+            android:padding="10dp" />
     </LinearLayout>
 </ScrollView>
